# cf

./: 1996_e.py  2005_a.py  2005_b.py  2008e_helper.py  2008f.py  2009c_helper.py  2014_eold.rs  Cargo.toml  \  a.rs  problem.sh
src/: 126_b.rs  1336_a.rs  1398_c.rs  1526_c.rs  189_A.rs  1996_e.rs  1998_a.rs  1998_b.rs  1999_A.rs  1999_b.rs  1999_c.rs  1999_d.rs  1999_e.rs  1999_f.rs  1999_g.rs  2000_a.rs  2000_b.rs  2000_c.rs  2000_d.rs  2000_e.rs  2000_f.rs  2001_a.rs  2001_b.rs  2001_c.rs  2005_a.rs  2005_b.rs  2005_e.rs  2006_a.rs  2007_a.rs  2007_b.rs  2007_c.rs  2008_a.rs  2008_b.rs  2008_c.rs  2008_d.rs  2008_e.rs  2008_f.rs  2009_a.rs  2009_b.rs  2009_c.rs  (+27 more)
